# swreq

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  exporter.py  hierarchy_sheet.py  llm_flask_app.py  llm_server.py  llm_streamlit_app.py  llm_tests.ipynb  main.py  manage_users.py  merger_rewrite.py  pre_processing.py  prompt_templates.py  prompt_templates_new.py  pyproject.toml  query_ui.py  requirements.txt  run.sh  users.db  word_output.py
.streamlit/: config.toml
C_Parsed/: BatteryPack.i  ETE.i  Fuze.i  Guidance.i  IMU.i  Servos.i  Telemetry.i  WiFi.i  Wind.i
api/: app.py  auth.py
artifacts/: .~lock.20260413_220516_Battery_Jama_LLR.csv#  .~lock.20260417_091319_IMU_Jama_LLR.xlsx#  20260411_202255_IMU_Jama_HLR.xlsx  20260411_224924_IMU_LLR.csv  20260427_115010_Wind_LLR.docx  20260427_115014_Wind_LLR.docx  20260427_115022_Wind_LLR.docx  20260427_115039_Wind_LLR.docx  20260427_140812_Wind_LLR.docx  20260427_150538_Wind_LLR.docx  20260427_150545_Wind_LLR.docx  20260427_150553_Wind_LLR.docx  20260427_150613_Wind_LLR.docx  20260427_150944_Wind_LLR.docx  20260427_150949_Wind_LLR.docx  20260427_150951_Wind_LLR.docx  20260427_150956_Wind_LLR.docx  20260427_151009_Wind_LLR.docx  20260427_153810_Wind_LLR.docx  20260428_081548_Wind_LLR.docx  20260428_081554_Wind_LLR.docx  20260428_081558_Wind_LLR.docx  20260428_081610_Wind_LLR.docx  20260428_082157_Wind_LLR.docx  20260428_082245_Wind_LLR.docx  20260428_085140_Wind_LLR.docx  20260428_090815_Wind_LLR.docx  20260428_092008_IMU_LLR.docx  20260428_093022_IMU_LLR.docx  (+14 more)
(+334 files in other folders)
